# KrakenTrades

./: .bandit  .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  bad_script.sh  configtest.py  docker-compose.yml  gitleaks_trigger.py  main.py  mypy.ini  pyproject.toml  requirements.txt  secretstrigger.py  setup.py  setup.sh  test.py  test.sql  test.txt  trigger_shellcheck.sh
.ci/common/: config.sh  installations.sh  sarif_utils.sh  strict_mode.sh
.github/workflows/: enhanced-security-scan.yml  run-tests.yml  trade-report.yml
.pre-commit-hooks/: file_linting.py
config/: config.py
file_management/: __init__.py  excel_styler.py  excel_writer.py  pdf_parser.py
kraken_core/: __init__.py  constants.py  custom_logger.py  data_classes.py  enums.py
market/: __init__.py  manual_injections.py  market_data.py
python_kraken_trades/: README.md  constants.py  enums.py  main.py  manual_injections.py  market_data.py  pdf_parser.py
python_kraken_trades/excel/: excel_styler.py  excel_writer.py
python_kraken_trades/file_management/: excel_writer.py
python_kraken_trades/kraken_core/: config.py
python_kraken_trades/market/: manual_injections.py
scripts/: __init__.py  get_trades_pdf.py  insert_excel_into_db.py  scan_repo.py
src/db/: __init__.py  db_connector.py
src/file_management/: __init__.py  excel_export.py  excel_styler.py  excel_writer.py  pdf_parser.py  portfolio_metrics.py  trade_report_data.py
src/helpers/: __init__.py  file_helper.py
tests/: main.py  test_generate_excel_file.py  test_scan_repo_root.py
(+22 files in other folders)
