
[tool.poetry]
name = "kraken-core"
version = "0.1.0"
description = "Core Kraken API wrapper"
authors = ["Filip <your-email@example.com>"]
readme = "README.md"
packages = [{ include = "kraken_core" }]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pydantic = "^2.6.0"
PyYAML = "^6.0.1"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"